aws-cf-scripts/vpc-endpoint-template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Create a web server ec2 instance with security group
Parameters:
  VpcId:
    Description: Current VPC Id
    Type: String
  SubnetId:
    Description: Subnet ID for EC2 instance
    Type: String

Resources:
  WebSG:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Allow Http and Ssh to web server
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: "tcp"
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  VPCEndpointSG:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Allow HTTPS access to API Gateway through VPC Endpoint
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

  VpcEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal: '*'
            Action: '*'
            Resource: '*'
      PrivateDnsEnabled: true
      VpcEndpointType: Interface
      SecurityGroupIds:
        - !GetAtt VPCEndpointSG.GroupId
      ServiceName: com.amazonaws.us-east-1.execute-api
      VpcId: !Ref VpcId
      SubnetIds:
        - !Ref SubnetId

Outputs:
  VPCEndpointId:
    Description: VPC Endpoint Id
    Value: !Ref VpcEndpoint
  WebSGId:
    Description: Web Security Group Id
    Value: !Ref WebSG
  VPCEndpointSGId:
    Description: VPC Endpoint Security Group Id
    Value: !Ref VPCEndpointSG
